@@ -9,10 +9,12 @@ import java.lang.reflect.Method;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.StandardOpenOption;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Map;
 import java.util.Set;
+import java.util.concurrent.CompletableFuture;
 import java.util.function.Consumer;
 
 import org.jboss.logging.Logger;
@@ -25,12 +27,15 @@ import io.quarkus.bootstrap.app.StartupAction;
 import io.quarkus.bootstrap.classloading.QuarkusClassLoader;
 import io.quarkus.builder.BuildResult;
 import io.quarkus.deployment.builditem.ApplicationClassNameBuildItem;
+import io.quarkus.deployment.builditem.DevServicesLauncherConfigResultBuildItem;
 import io.quarkus.deployment.builditem.GeneratedClassBuildItem;
 import io.quarkus.deployment.builditem.GeneratedResourceBuildItem;
 import io.quarkus.deployment.builditem.MainClassBuildItem;
+import io.quarkus.deployment.builditem.RuntimeApplicationShutdownBuildItem;
 import io.quarkus.deployment.builditem.TransformedClassesBuildItem;
 import io.quarkus.deployment.configuration.RunTimeConfigurationGenerator;
 import io.quarkus.dev.appstate.ApplicationStateNotification;
+import io.quarkus.runtime.ApplicationLifecycleManager;
 import io.quarkus.runtime.Quarkus;
 import io.quarkus.runtime.configuration.RuntimeOverrideConfigSource;
 
@@ -102,6 +107,14 @@ public class StartupActionImpl implements StartupAction {
                         if (ApplicationStateNotification.getState() == ApplicationStateNotification.State.INITIAL) {
                             ApplicationStateNotification.notifyStartupFailed(e);
                         }
+                    } finally {
+                        for (var i : buildResult.consumeMulti(RuntimeApplicationShutdownBuildItem.class)) {
+                            try {
+                                i.getCloseTask().run();
+                            } catch (Throwable t) {
+                                log.error("Failed to run close task", t);
+                            }
+                        }
                     }
                 }
             }, "Quarkus Main Thread");
@@ -139,7 +152,44 @@ public class StartupActionImpl implements StartupAction {
         } finally {
             Thread.currentThread().setContextClassLoader(old);
         }
+    }
 
+    @Override
+    public int runMainClassBlocking(String... args) throws Exception {
+        //we have our class loaders
+        ClassLoader old = Thread.currentThread().getContextClassLoader();
+        Thread.currentThread().setContextClassLoader(runtimeClassLoader);
+        final String className = buildResult.consume(MainClassBuildItem.class).getClassName();
+        try {
+            CompletableFuture<Integer> result = new CompletableFuture<>();
+            Class<?> lifecycleManager = Class.forName(ApplicationLifecycleManager.class.getName(), true, runtimeClassLoader);
+            lifecycleManager.getDeclaredMethod("setDefaultExitCodeHandler", Consumer.class).invoke(null,
+                    new Consumer<Integer>() {
+                        @Override
+                        public void accept(Integer integer) {
+                            result.complete(integer);
+                        }
+                    });
+            // force init here
+            Class<?> appClass = Class.forName(className, true, runtimeClassLoader);
+            Method start = appClass.getMethod("main", String[].class);
+            start.invoke(null, (Object) (args == null ? new String[0] : args));
+            Integer returnVal = result.get();
+            Class<?> q = Class.forName(Quarkus.class.getName(), true, runtimeClassLoader);
+            q.getMethod("blockingExit").invoke(null);
+
+            return returnVal;
+        } finally {
+            runtimeClassLoader.close();
+            Thread.currentThread().setContextClassLoader(old);
+            for (var i : buildResult.consumeMulti(RuntimeApplicationShutdownBuildItem.class)) {
+                try {
+                    i.getCloseTask().run();
+                } catch (Throwable t) {
+                    log.error("Failed to run close task", t);
+                }
+            }
+        }
     }
 
     @Override
@@ -177,7 +227,7 @@ public class StartupActionImpl implements StartupAction {
             }
 
             Method start = appClass.getMethod("start", String[].class);
-            Object application = appClass.newInstance();
+            Object application = appClass.getDeclaredConstructor().newInstance();
             start.invoke(application, (Object) args);
             Closeable closeTask = (Closeable) application;
             return new RunningQuarkusApplicationImpl(new Closeable() {
@@ -196,6 +246,14 @@ public class StartupActionImpl implements StartupAction {
                         }
                     } finally {
                         ForkJoinClassLoading.setForkJoinClassLoader(ClassLoader.getSystemClassLoader());
+
+                        for (var i : buildResult.consumeMulti(RuntimeApplicationShutdownBuildItem.class)) {
+                            try {
+                                i.getCloseTask().run();
+                            } catch (Throwable t) {
+                                log.error("Failed to run close task", t);
+                            }
+                        }
                         if (curatedApplication.getQuarkusBootstrap().getMode() == QuarkusBootstrap.Mode.TEST &&
                                 !curatedApplication.getQuarkusBootstrap().isAuxiliaryApplication()) {
                             //for tests we just always shut down the curated application, as it is only used once
@@ -221,14 +279,26 @@ public class StartupActionImpl implements StartupAction {
         return runtimeClassLoader;
     }
 
+    @Override
+    public Map<String, String> getDevServicesProperties() {
+        DevServicesLauncherConfigResultBuildItem result = buildResult
+                .consumeOptional(DevServicesLauncherConfigResultBuildItem.class);
+        if (result == null) {
+            return Collections.emptyMap();
+        }
+        return new HashMap<>(result.getConfig());
+    }
+
     private Map<String, byte[]> extractTransformers(Set<String> eagerClasses) {
         Map<String, byte[]> ret = new HashMap<>();
         TransformedClassesBuildItem transformers = buildResult.consume(TransformedClassesBuildItem.class);
         for (Set<TransformedClassesBuildItem.TransformedClass> i : transformers.getTransformedClassesByJar().values()) {
             for (TransformedClassesBuildItem.TransformedClass clazz : i) {
-                ret.put(clazz.getFileName(), clazz.getData());
-                if (clazz.isEager()) {
-                    eagerClasses.add(clazz.getClassName());
+                if (clazz.getData() != null) {
+                    ret.put(clazz.getFileName(), clazz.getData());
+                    if (clazz.isEager()) {
+                        eagerClasses.add(clazz.getClassName());
+                    }
                 }
             }
         }
