@@ -2,9 +2,6 @@ package io.quarkus.arc.deployment;
 
 import static io.quarkus.runtime.annotations.ConfigPhase.BUILD_TIME;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -20,8 +17,8 @@ import io.quarkus.runtime.annotations.ConfigRoot;
 @ConfigRoot(phase = BUILD_TIME)
 public class ArcConfig {
 
-    public static final Set<String> ALLOWED_REMOVE_UNUSED_BEANS_VALUES = Collections
-            .unmodifiableSet(new HashSet<>(Arrays.asList("all", "true", "none", "false", "fwk", "framework")));
+    public static final Set<String> ALLOWED_REMOVE_UNUSED_BEANS_VALUES = Set.of("all", "true", "none", "false", "fwk",
+            "framework");
 
     /**
      * <ul>
@@ -183,6 +180,18 @@ public class ArcConfig {
      */
     @ConfigItem
     public ArcTestConfig test;
+
+    /**
+     * The list of packages that will not be checked for split package issues.
+     * <p>
+     * A package string representation can be:
+     * <ul>
+     * <li>a full name of the package, i.e. {@code org.acme.foo}</li>
+     * <li>a package name with suffix {@code .*}, i.e. {@code org.acme.*}, which matches a package that starts with provided
+     * value</li>
+     */
+    @ConfigItem
+    public Optional<List<String>> ignoredSplitPackages;
 
     public final boolean isRemoveUnusedBeansFieldValid() {
         return ALLOWED_REMOVE_UNUSED_BEANS_VALUES.contains(removeUnusedBeans.toLowerCase());
