@@ -55,6 +55,7 @@ public class KotlinCoroutineIntegrationProcessor {
     @BuildStep
     MethodScannerBuildItem scanner() {
         return new MethodScannerBuildItem(new MethodScanner() {
+            @SuppressWarnings("unchecked")
             @Override
             public List<HandlerChainCustomizer> scan(MethodInfo method, ClassInfo actualEndpointClass,
                     Map<String, Object> methodContext) {
@@ -68,6 +69,14 @@ public class KotlinCoroutineIntegrationProcessor {
                             method.declaringClass(), method,
                             (BuildProducer<GeneratedClassBuildItem>) methodContext.get(GeneratedClassBuildItem.class.getName()),
                             recorder));
+                    if (methodContext.containsKey(EndpointIndexer.METHOD_CONTEXT_CUSTOM_RETURN_TYPE_KEY)) {
+                        Type methodReturnType = (Type) methodContext.get(EndpointIndexer.METHOD_CONTEXT_CUSTOM_RETURN_TYPE_KEY);
+                        if (methodReturnType != null) {
+                            if (methodReturnType.name().equals(FLOW)) {
+                                return List.of(processor, flowCustomizer());
+                            }
+                        }
+                    }
                     return Collections.singletonList(processor);
                 }
                 return Collections.emptyList();
@@ -98,6 +107,16 @@ public class KotlinCoroutineIntegrationProcessor {
                     return new NullParamExtractor();
                 }
                 return null;
+            }
+
+            @Override
+            public boolean isMethodSignatureAsync(MethodInfo info) {
+                for (var param : info.parameters()) {
+                    if (param.name().equals(CONTINUATION)) {
+                        return true;
+                    }
+                }
+                return false;
             }
         });
     }
@@ -161,12 +180,21 @@ public class KotlinCoroutineIntegrationProcessor {
                     Map<String, Object> methodContext) {
                 DotName returnTypeName = method.returnType().name();
                 if (returnTypeName.equals(FLOW)) {
-                    return Collections.singletonList(new FixedHandlersChainCustomizer(
-                            List.of(new FlowToPublisherHandler(), new PublisherResponseHandler()),
-                            HandlerChainCustomizer.Phase.AFTER_METHOD_INVOKE));
+                    return Collections.singletonList(flowCustomizer());
                 }
                 return Collections.emptyList();
             }
+
+            @Override
+            public boolean isMethodSignatureAsync(MethodInfo info) {
+                return info.returnType().name().equals(FLOW);
+            }
         });
+    }
+
+    private static HandlerChainCustomizer flowCustomizer() {
+        return new FixedHandlersChainCustomizer(
+                List.of(new FlowToPublisherHandler(), new PublisherResponseHandler()),
+                HandlerChainCustomizer.Phase.AFTER_METHOD_INVOKE);
     }
 }
