@@ -2,9 +2,7 @@ package io.quarkus.arc.impl;
 
 import io.quarkus.arc.InjectableBean;
 import java.lang.reflect.Type;
-import java.util.Arrays;
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.Set;
 import javax.enterprise.context.spi.CreationalContext;
 import javax.enterprise.inject.Instance;
@@ -12,8 +10,7 @@ import javax.enterprise.inject.spi.InjectionPoint;
 
 public class InstanceBean extends BuiltInBean<Instance<?>> {
 
-    public static final Set<Type> INSTANCE_TYPES = Collections
-            .unmodifiableSet(new HashSet<>(Arrays.asList(Instance.class, Object.class)));
+    public static final Set<Type> INSTANCE_TYPES = Set.of(Instance.class, Object.class);
 
     static final InstanceBean INSTANCE = new InstanceBean();
 
