@@ -34,7 +34,7 @@ public class BootstrapWagonProvider implements WagonProvider {
         final Class<?> cls = loadClass(impl, roleHint);
         final Object wagon;
         try {
-            wagon = cls.newInstance();
+            wagon = cls.getDeclaredConstructor().newInstance();
         } catch (Throwable t) {
             throw new IllegalStateException("Failed to instantiate Wagon impl " + impl, t);
         }
