@@ -114,6 +114,7 @@ public class QuarkusDevModeTest
     private String[] commandLineArgs = new String[0];
     private final Map<String, String> oldSystemProps = new HashMap<>();
     private final Map<String, String> buildSystemProperties = new HashMap<>();
+    private boolean allowFailedStart = false;
 
     private static final List<CompilationProvider> compilationProviders;
 
@@ -158,6 +159,10 @@ public class QuarkusDevModeTest
         return inMemoryLogHandler.records;
     }
 
+    public void clearLogRecords() {
+        inMemoryLogHandler.clearRecords();
+    }
+
     public QuarkusDevModeTest setBuildSystemProperty(String name, String value) {
         buildSystemProperties.put(name, value);
         return this;
@@ -166,7 +171,7 @@ public class QuarkusDevModeTest
     public Object createTestInstance(TestInstanceFactoryContext factoryContext, ExtensionContext extensionContext)
             throws TestInstantiationException {
         try {
-            Object actualTestInstance = factoryContext.getTestClass().newInstance();
+            Object actualTestInstance = factoryContext.getTestClass().getDeclaredConstructor().newInstance();
             TestHTTPResourceManager.inject(actualTestInstance);
             return actualTestInstance;
         } catch (Exception e) {
@@ -187,6 +192,7 @@ public class QuarkusDevModeTest
         if (archiveProducer == null) {
             throw new RuntimeException("QuarkusDevModeTest does not have archive producer set");
         }
+        ExclusivityChecker.checkTestType(extensionContext, QuarkusDevModeTest.class);
 
         if (logFileName != null) {
             PropertyTestUtil.setLogFileProperty(logFileName);
@@ -240,14 +246,18 @@ public class QuarkusDevModeTest
             DevModeContext context = exportArchive(deploymentDir, projectSourceRoot, projectSourceParent);
             context.setArgs(commandLineArgs);
             context.setTest(true);
-            context.setAbortOnFailedStart(true);
+            context.setAbortOnFailedStart(!allowFailedStart);
             context.getBuildSystemProperties().put("quarkus.banner.enabled", "false");
             context.getBuildSystemProperties().putAll(buildSystemProperties);
             devModeMain = new DevModeMain(context);
             devModeMain.start();
             ApplicationStateNotification.waitForApplicationStart();
         } catch (Exception e) {
-            throw new RuntimeException(e);
+            if (allowFailedStart) {
+                e.printStackTrace();
+            } else {
+                throw new RuntimeException(e);
+            }
         }
     }
 
@@ -262,6 +272,7 @@ public class QuarkusDevModeTest
         }
         rootLogger.setHandlers(originalRootLoggerHandlers);
         inMemoryLogHandler.clearRecords();
+        inMemoryLogHandler.setFilter(null);
         ClearCache.clearAnnotationCache();
         GroovyCacheCleaner.clearGroovyCache();
     }
@@ -812,5 +823,14 @@ public class QuarkusDevModeTest
             }
         }
         throw new RuntimeException("Could not find source file for " + classFile);
+    }
+
+    public boolean isAllowFailedStart() {
+        return allowFailedStart;
+    }
+
+    public QuarkusDevModeTest setAllowFailedStart(boolean allowFailedStart) {
+        this.allowFailedStart = allowFailedStart;
+        return this;
     }
 }
